# agentic_trading

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE_OPTIMIZATION.md  CLAUDE.md  LOCALIZATION_PROPOSAL.md  MIGRATION.md  OPTIMIZATION_COMPLETION_SUMMARY.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  PAPER_TRADING_VALIDATION.md  QUICKSTART.md  README.md  SAFETY_CHECKLIST.md  TEST_VERIFICATION_REPORT.md  prompt_updates_summary.md  pyproject.toml  requirements.txt  test_mcp_servers.md  test_openrouter.py  test_report.md  test_template_localization.py  verify_setup.py
.serena/: project.yml
data_lake/: __init__.py  db_config.py  db_helpers.py  market_data_manager.py  schema.sql  seed_watchlist.py  snapshot_manager.py
docs/: DATA_PERSISTENCE_GUIDE.md  INCREMENTAL_SYNC_GUIDE.md  LOCALIZATION_SUMMARY.md  QUICK_FIX_GUIDE.md  QUICK_START_INCREMENTAL_SYNC.md  QUICK_START_WORKFLOW_SKILLS.md  REST_API_SYNC.md  SWARM_ENHANCEMENTS.md  THETADATA_API_FIX.md  THETA_TERMINAL_SETUP.md  commander_code_examples.md  enhance_plan.md  slash-command-guide.md  thetadata_mcp_api.md  translation_glossary.md
openspec/: AGENTS.md  project.md
prompts/: commander_system.md  commander_system_v2.md
runtime/: README.md  __init__.py  data_fetcher.py  data_sync_daemon.py  main_loop.py  trade_analyze.py  trade_health.py  trade_risk.py  watchdog.py
scripts/: README.md  SLASH_COMMAND_INTEGRATION.md  backfill_historical_data.py  check_backfill_status.py  demo_incremental_sync.py  fetch_real_market_data.py  incremental_data_sync.py  market_health.py  monitor_backfill.sh  risk_check.py  (+8 more)
(+154 files in other folders)
